manifests/argocd/env/dev/todo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
spec:
  ingressClassName: alb
  rules:
    - host: todo.ccswebdragon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo
                port:
                  number: 80
